--- a/style.css
+++ b/style.css
@@ -6,3 +6,23 @@
 .total-cost {
   font-size: 10em;
 }
+
+#progress-bar {
+  width: 50%;
+  margin: 0 auto;
+}
+
+#progress-bar .ui-widget-header {
+  background: #31a21e;
+  border-color: #31a21e;
+}
+
+#progress-bar.amber .ui-widget-header {
+  background: #d6923b;
+  border-color: #d6923b;
+}
+
+#progress-bar.red .ui-widget-header {
+  background: #bc3725;
+  border-color: #bc3725;
+}
